force-app/main/default/objects/Mill_Planner__c/Mill_Planner__c.object-meta.xml
<CustomObject>
    <label>Mill Planner</label>
    <nameField>
        <label>Mill Planner Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Mill Planner</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>