force-app/main/default/objects/Mill_Planner__c/fields/Area__c.field-meta.xml
<CustomField>
    <fullName>Area__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Territory</label>
    <referenceTo>Territory__c</referenceTo>
    <relationshipLabel>Mill Planner</relationshipLabel>
    <relationshipName>Day_Schedules</relationshipName>
    <type>Lookup</type>
</CustomField>