force-app/main/default/objects/Mill_Planner__c/fields/Cases__c.field-meta.xml
<CustomField>
    <fullName>Cases__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case Number</label>
    <referenceTo>Cases__c</referenceTo>
    <relationshipLabel>Mill Planner</relationshipLabel>
    <relationshipName>Mill_Planner</relationshipName>
    <type>Lookup</type>
</CustomField>