force-app/main/default/objects/Mill_Planner__c/fields/Day_Planner__c.field-meta.xml
<CustomField>
    <fullName>Day_Planner__c</fullName>
    <label>Day Planner</label>
    <referenceTo>Day_Planner__c</referenceTo>
    <relationshipName>Day_Schedules</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>