force-app/main/default/objects/Mill_Planner__c/fields/Follow_Up_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Follow_Up_Date_Time__c</fullName>
    <label>Follow-Up Date/Time</label>
    <type>DateTime</type>
</CustomField>