force-app/main/default/objects/Mill_Planner__c/fields/Mill_End_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Mill_End_Date_Time__c</fullName>
    <label>Mill Visit End Date/Time</label>
    <type>DateTime</type>
</CustomField>