force-app/main/default/objects/Mill_Planner__c/fields/Mill_Name__c.field-meta.xml
<CustomField>
    <fullName>Mill_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Mill Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Mill Planner</relationshipLabel>
    <relationshipName>Day_Schedules</relationshipName>
    <type>Lookup</type>
</CustomField>