force-app/main/default/objects/Mill_Planner__c/fields/Mill_Start_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Mill_Start_Date_Time__c</fullName>
    <label>Mill Visit Start Date/Time</label>
    <type>DateTime</type>
</CustomField>