force-app/main/default/objects/Mill_Planner__c/fields/Next_FollowUp__c.field-meta.xml
<CustomField>
    <fullName>Next_FollowUp__c</fullName>
    <label>Next FollowUp</label>
    <type>Date</type>
</CustomField>