force-app/main/default/objects/Mill_Planner__c/fields/Opportunities__c.field-meta.xml
<CustomField>
    <fullName>Opportunities__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunities</label>
    <referenceTo>Opportunities__c</referenceTo>
    <relationshipLabel>Mill Planner</relationshipLabel>
    <relationshipName>Mill_Planner</relationshipName>
    <type>Lookup</type>
</CustomField>