force-app/main/default/objects/Mill_Planner__c/fields/Plan_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Plan_Date_Time__c</fullName>
    <label>Plan Date/Time</label>
    <type>DateTime</type>
</CustomField>