force-app/main/default/objects/Mill_Planner__c/fields/Rice_Mill_Name__c.field-meta.xml
<CustomField>
    <fullName>Rice_Mill_Name__c</fullName>
    <formula>Cases__r.Account_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Rice Mill Name</label>
    <type>Text</type>
</CustomField>