force-app/main/default/objects/Mill_Planner__c/fields/Sales_Representative__c.field-meta.xml
<CustomField>
    <fullName>Sales_Representative__c</fullName>
    <label>Sales Representative</label>
    <length>200</length>
    <type>Text</type>
</CustomField>