force-app/main/default/objects/Mill_Planner__c/validationRules/Feedback.validationRule-meta.xml
<ValidationRule>
    <fullName>Feedback</fullName>
    <active>false</active>
    <errorConditionFormula>ISBLANK(Feedback__c)</errorConditionFormula>
    <errorMessage>Please enter the Feedback</errorMessage>
</ValidationRule>