force-app/main/default/objects/Mill_Planner__c/validationRules/Related_Area_selection.validationRule-meta.xml
<ValidationRule>
    <fullName>Related_Area_selection</fullName>
    <active>false</active>
    <errorConditionFormula>Area__r.Parent_Location__c &lt;&gt; Mill_Name__r.Area__c</errorConditionFormula>
    <errorMessage>Please select Appropriate area related to Day Planner</errorMessage>
</ValidationRule>