force-app/main/default/objects/Mill_Planner__c/listViews/Free_View.listView-meta.xml
<ListView>
    <fullName>Free_View</fullName>
    <columns>NAME</columns>
    <columns>Sequence__c</columns>
    <columns>Mill_Name__c</columns>
    <columns>Day_Planner__c</columns>
    <columns>Area__c</columns>
    <columns>Sales_Representative__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Mills</label>
</ListView>